--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@femto-apps/config": "^1.0.0",
     "qs": "^6.7.0",
     "redis": "^2.8.0"
   }
