--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "token-service",
   "version": "1.0.0",
-  "description": "",
+  "description": "Fast token retrieval from a token store",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "nodemon": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "[Popey456963, aappleton8]",
+  "license": "MIT",
   "dependencies": {
     "@femto-apps/config": "^1.0.0",
     "qs": "^6.7.0",
